# ng-orbit

./: README.md
autonomous-vision/: CMakeCache.txt  CMakeLists.txt  Makefile  README_software.md  cmake_install.cmake  finer_Yoke.PLY  icp_implementation.cpp  rs-pcl-ransac.cpp  test_inneryoke.PLY
controller/astrobee_gripper/: README.md
controller/astrobee_gripper/vars/: Stanford_Adafruit_VL6180X.cpp  Stanford_Adafruit_VL6180X.h  vars.ino  z_actions.ino  z_card.ino  z_tx.ino
controller/astrobee_gripper/vars_test/: test_checksum.ino  test_close_experiment.ino  test_open.ino  test_ping.ino  test_read.ino  test_write.ino  test_z.ino  vars_test.ino
grappling/controller/astrobee_gripper/: 65521.TXT
grappling/controller/astrobee_gripper/vars/: Stanford_Adafruit_INA219.cpp  Stanford_Adafruit_INA219.h  gripper_test_code.ino  z_notes.ino
grappling/controller/astrobee_gripper/vars_test/: common.ino  test_mark.ino  update_crc.ino
ng_realsense/: CMakeLists.txt  first_program.cpp  icp_implementation.cpp  multiway-registration.cpp  open3d_test.cpp  pointcloud_test.cpp
